Remove duplicate dependency update base64 api